5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4445/executions/1670_2975.log
== TEST (2019-04-16 18:09:52) 
-- CODE:
print("quantidade de suco:")
      
-- OUTPUT:
quantidade de suco:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:10:19) 
-- CODE:
print("quantidade de suco:")
     msg == 2
      
-- ERROR:
File "XXXX", line 2
    msg == 2
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:23) 
-- CODE:
print("quantidade de suco:")
    msg (2*3.00)
print("quantidade de salgado")
print("valor que temos disponivel")
      
-- ERROR:
File "XXXX", line 2
    msg (2*3.00)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:13:32) 
-- CODE:
print("quantidade de suco:")
    msg (2*3.00)
print("quantidade de salgado")
print("valor que temos disponivel")
      
-- EXECUTION TIME:
0.125832
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 2
    msg (2*3.00)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:35) 
-- CODE:
print("quantidade de suco:")
    msg (2*3.00)
print("quantidade de salgado")
print("valor que temos disponivel")
      
-- ERROR:
File "XXXX", line 2
    msg (2*3.00)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:59) 
-- CODE:
x=int(input(round)print("quantidade de suco:")
    msg (2*3.00)
print("quantidade de salgado")
    msg (2*3.50)
print("valor que temos disponivel")
    msg (20)
	total round
      
-- ERROR:
File "XXXX", line 1
    x=int(input(round)print("quantidade de suco:")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:59) 
-- CODE:
x=int(input("quantidade de suco:")
    round(2*3.00)
print("quantidade de salgado")
    msg (2*3.50)
print("valor que temos disponivel")
    msg (20)
	total round
      
-- ERROR:
File "XXXX", line 2
    round(2*3.00)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:11) 
-- CODE:
x=int(input("quantidade de suco:")
    round(2*3.00)
print("quantidade de salgado")
    msg="2*3.50"
print("valor que temos disponivel")
    msg 20
	total round
      
-- ERROR:
File "XXXX", line 2
    round(2*3.00)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:56) 
-- CODE:
x=round(input("quantidade de suco:")
    round(2*3.00)
print("quantidade de salgado")
    msg=(2*3.50)
y=round(input("valor que temos disponivel")
    msg 20
	total=round(20,2)
      
-- ERROR:
File "XXXX", line 2
    round(2*3.00)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:10) 
-- CODE:
x=round(input("quantidade de suco:")
     msg=(2*3.00)
print("quantidade de salgado")
    msg=(2*3.50)
y=round(input("valor que temos disponivel")
    msg 20
	total=round(20,2)
      
-- ERROR:
File "XXXX", line 2
    msg=(2*3.00)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:26) 
-- CODE:
x=round(input("quantidade de suco:")
     msg=(2*3)
print("quantidade de salgado")
    msg=(2*3.50)
y=round(input("valor que temos disponivel")
    msg 20
	total=round(20,2)
      
-- ERROR:
File "XXXX", line 2
    msg=(2*3)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:40) 
-- CODE:
x=round(input("quantidade de suco:")
     msg=(2*3)
print("quantidade de salgado")
    msg=(2*3.5)
y=round(input("valor que temos disponivel")
    msg 20
	total=round(20,2)
      
-- ERROR:
File "XXXX", line 2
    msg=(2*3)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:33) 
-- CODE:
x=round(input("quantidade de suco:")
     x=(2*3)
print("quantidade de salgado")
    y=(2*3.5)
y=round(input("valor que temos disponivel")
     x,y=20
	total=round(20,2)
      
-- ERROR:
File "XXXX", line 2
    x=(2*3)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:29:20) 
-- CODE:
x=round(input("quantidade de suco:")
     x=(2*3)
print("quantidade de salgado")
    y=(2*3.5)
y=round(input("valor que temos disponivel")
     disponivel=20
	total=round(20,2)
      
-- EXECUTION TIME:
0.133667
-- ERROR:
  File "/home/codebench/codes/1670/2975/main.py", line 2
    x=(2*3)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
